Updated products by brands remove filter
