# api/controllers/GetProductByBrand.js
@@ -4,9 +4,6 @@ const { categoriesFilter, product, categories } = require('../../utils/fixtures'
 function GetProductByBrand(req, res) {
   res.json({
     productLists: [product],
-    filters: {
-      categories: categoriesFilter
-    },
     totalCount: 1
   })
 }
