# api/swagger/swagger.yaml
@@ -414,15 +414,10 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/product'
-      filters:
-        type: object
-        description: "Object for filtering"
-        properties:
-          categories:
-            type: array
-            description: 'Categories that will be use for filtering the items.'
-            items:
-              $ref: '#/definitions/category'
+      totalCount:
+        type: integer
+        description: "Total number of item, required for pagination"
+        default: 1
               
   product_categories:
     type: object
